# reference-implementation

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.txt  pyproject.toml
.claude/: .gitignore  CLAUDE.md  settings.json
.claude/agents/: dev-setup.md  doc-updater.md  feature-planner.md  implementer.md  pr-manager.md  security-analyzer.md  style-checker.md  test-writer.md  ux-analyzer.md
.claude/commands/: analyze-ux.md  check-style.md  create-pr.md  implement.md  plan-feature.md  security-analysis.md  setup-dev.md  update-docs.md  write-tests.md
.claude/reports/: security-2026-04-22.md
.claude/rules/: architecture.md  cpp-style.md  pr-guidelines.md  python-style.md
.claude/skills/build-runtime/: SKILL.md
.claude/skills/build-toolchain/: SKILL.md
.claude/skills/oaax-context/: SKILL.md
.github/workflows/: build-runtime.yml  build-toolchain.yml  ci.yml  delete-temporary-artifacts.yml  download-toolchain.yml  integration-tests.yml  lint.yml
conversion-toolchain/: Dockerfile  README.md  build-toolchain.sh  requirements.txt  setup.py
conversion-toolchain/conversion_toolchain/: logger.py  main.py  utils.py
conversion-toolchain/scripts/: convert.sh
runtime-library/: CMakeLists.txt  README.md  build-runtime.bat  build-runtime.sh  build-runtimes.bat  build-runtimes.sh
runtime-library/include/: oaax_runtime.h  runtime_core.h  runtime_core.hpp  runtime_utils.h  runtime_utils.hpp
runtime-library/src/: protobuf-c.c  runtime_core.c  runtime_core.cpp  runtime_utils.c  runtime_utils.cpp
runtime-library/toolchains/: mingw-w64-x86_64-posix.cmake
scripts/: check-secrets.sh  setup-env.sh  setup_env.sh  upload-to-storage.sh
tests/: README.md  conftest.py  models.py  stage1.py  stage2.py  test_conversion.py  test_docker.py  test_yolo_integration.py
tests/runtime/: CMakeLists.txt  build-tests.sh  lifecycle_test.cpp  multi_model_test.cpp  simple_test.cpp  yolo_test.cpp
